Enforce compliance startup and contract authority

--- a/.env.example
+++ b/.env.example
@@ -10,16 +10,46 @@ POSTGRES_DB=frostgate
 REDIS_PASSWORD=
 
 # API Keys (use FG_API_KEYS_FILE in production)
+# Format: 32+ chars, random (avoid dictionary words)
 FG_API_KEY=
+
+# Encryption / JWT (required in prod)
+# Format: 32+ chars, random (base64 ok)
+FG_ENCRYPTION_KEY=
+FG_JWT_SECRET=
+
+# Webhook signing (required in prod)
+# Format: 32+ chars, random
+FG_WEBHOOK_SECRET=
 
 # Environment
 FG_ENV=dev
 FG_DEBUG=false
 FG_LOG_LEVEL=info
+FG_DB_BACKEND=postgres
+FG_DB_URL=
+
+# CORS (no wildcard; comma-separated origins)
+FG_CORS_ORIGINS=https://example.com
+
+# UI kill-switch (prod/staging default is disabled if unset)
+FG_UI_ENABLED=0
 
 # Admin Gateway (use with docker compose --profile admin)
-AG_CORS_ORIGINS=*
+# CORS: explicit origins required
+AG_CORS_ORIGINS=http://localhost:13000
 AG_AUDIT_ENABLED=true
 
 # Console (use with docker compose --profile admin)
 # NEXT_PUBLIC_API_URL is set automatically in docker-compose
+
+# Compliance-critical modules (must be enabled in prod/staging)
+FG_GOVERNANCE_ENABLED=1
+FG_ROE_ENGINE_ENABLED=1
+FG_RING_ROUTER_ENABLED=1
+FG_MISSION_ENVELOPE_ENABLED=1
+
+# Compliance-critical resources (required when modules enabled in prod/staging)
+FG_MISSION_ENVELOPE_PATH=/etc/frostgate/mission_envelope.json
+FG_RING_STATE_DIR=/var/lib/frostgate/state
+FG_RING_MODEL_DIR=/var/lib/frostgate/models
