Add spine enforcement gates

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,12 @@ POSTGRES_DB=frostgate
 # Redis (required - no default for security)
 REDIS_PASSWORD=
 
+# NATS (required for ingestion bus in prod)
+NATS_AUTH_TOKEN=
+FG_NATS_URL=
+FG_NATS_ENABLED=0
+FG_NATS_RISK_ACCEPTED=0
+
 # API Keys (use FG_API_KEYS_FILE in production)
 # Format: 32+ chars, random (avoid dictionary words)
 FG_API_KEY=
@@ -28,6 +34,8 @@ FG_DEBUG=false
 FG_LOG_LEVEL=info
 FG_DB_BACKEND=postgres
 FG_DB_URL=
+FG_DB_MIGRATIONS_REQUIRED=1
+FG_DB_MIGRATIONS_RISK_ACCEPTED=0
 
 # CORS (no wildcard; comma-separated origins)
 FG_CORS_ORIGINS=https://example.com
@@ -48,6 +56,11 @@ FG_GOVERNANCE_ENABLED=1
 FG_ROE_ENGINE_ENABLED=1
 FG_RING_ROUTER_ENABLED=1
 FG_MISSION_ENVELOPE_ENABLED=1
+
+# Policy enforcement (OPA)
+FG_OPA_URL=http://localhost:18181
+FG_OPA_ENFORCE=1
+FG_OPA_RISK_ACCEPTED=0
 
 # Compliance-critical resources (required when modules enabled in prod/staging)
 FG_MISSION_ENVELOPE_PATH=/etc/frostgate/mission_envelope.json
