--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,14 @@ services:
     ports:
       - "4222:4222"
       - "8222:8222"  # HTTP monitoring
-    command: ["-js", "-m", "8222"]  # Enable JetStream and monitoring
+    command:
+      [
+        "-js",
+        "-m",
+        "8222",
+        "--auth",
+        "${NATS_AUTH_TOKEN:?set NATS_AUTH_TOKEN in .env}"
+      ] # Enable JetStream, monitoring, and auth
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8222/healthz"]
       interval: 5s
@@ -61,7 +68,10 @@ services:
     volumes:
       - ./policy/opa:/policies:ro
     healthcheck:
-      disable: true
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8181/health"]
+      interval: 5s
+      timeout: 3s
+      retries: 10
 
   frostgate-core:
     build:
@@ -111,13 +121,14 @@ services:
       FG_REDIS_URL: ${FG_REDIS_URL:-redis://:${REDIS_PASSWORD}@redis:6379/0}
 
       # NATS URL for ingestion bus
-      FG_NATS_URL: ${FG_NATS_URL:-nats://nats:4222}
+      FG_NATS_URL: ${FG_NATS_URL:-nats://${NATS_AUTH_TOKEN:?set NATS_AUTH_TOKEN in .env}@nats:4222}
 
       # OPA policy evaluation
       FG_OPA_URL: ${FG_OPA_URL:-http://opa:8181}
       FG_OPA_PATH: ${FG_OPA_PATH:-/v1/data/frostgate/defend}
       FG_OPA_TIMEOUT_SEC: ${FG_OPA_TIMEOUT_SEC:-0.25}
-      FG_OPA_ENFORCE: ${FG_OPA_ENFORCE:-false}
+      FG_OPA_ENFORCE: ${FG_OPA_ENFORCE:-true}
+      FG_OPA_RISK_ACCEPTED: ${FG_OPA_RISK_ACCEPTED:-false}
 
       # HTTP DoS hardening (explicit in production)
       FG_DOS_GUARD_ENABLED: ${FG_DOS_GUARD_ENABLED:-true}
