Fix CI envs and contract hash

--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -21,6 +21,7 @@ jobs:
           print(f"FG_API_KEY={secrets.token_urlsafe(32)}")
           print(f"REDIS_PASSWORD={secrets.token_urlsafe(24)}")
           print(f"POSTGRES_PASSWORD={secrets.token_urlsafe(24)}")
+          print(f"NATS_AUTH_TOKEN={secrets.token_urlsafe(24)}")
           print(f"FG_AGENT_API_KEY={secrets.token_urlsafe(24)}")
           PY
 
@@ -28,7 +29,7 @@ jobs:
         run: |
           set -euo pipefail
           missing=0
-          for var in FG_API_KEY REDIS_PASSWORD POSTGRES_PASSWORD FG_AGENT_API_KEY; do
+          for var in FG_API_KEY REDIS_PASSWORD POSTGRES_PASSWORD NATS_AUTH_TOKEN FG_AGENT_API_KEY; do
             if [ -n "${!var:-}" ]; then
               echo "${var}=set"
             else
@@ -52,6 +53,7 @@ jobs:
             echo "FG_API_KEY=${FG_API_KEY}"
             echo "REDIS_PASSWORD=${REDIS_PASSWORD}"
             echo "POSTGRES_PASSWORD=${POSTGRES_PASSWORD}"
+            echo "NATS_AUTH_TOKEN=${NATS_AUTH_TOKEN}"
             echo "FG_AGENT_API_KEY=${FG_AGENT_API_KEY}"
           } >> .env.ci
           cp .env.ci .env
