Fix fg-fast contract authority and schema sync

--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,7 @@ __pycache__/
 
 # FrostGate secrets/state
 secrets/
+!secrets/*.example.txt
 state/
 .env
 .env.*
@@ -162,3 +163,5 @@ supervisor-sidecar/supervisor-sidecar
 # ---- Contracted artifacts (versioned schemas) ----
 !contracts/artifacts/
 !contracts/artifacts/*.json
+!schemas/artifacts/
+!schemas/artifacts/*.json
