--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,6 +107,12 @@ jobs:
       - name: Syntax / import guard (fast fail)
         run: python -m compileall -q api engine tests
 
+      - name: Enforce tenant DB dependency lint
+        run: python tools/ci/check_db_dependency.py
+
+      - name: Enforce route scope lint
+        run: python tools/ci/check_route_scopes.py
+
       - name: Run fg-fast guard lane (lock regression)
         run: make fg-fast
         env:
@@ -270,12 +276,23 @@ jobs:
     if: ${{ github.event_name == 'pull_request' || needs.fg_guard.outputs.core == 'true' || needs.fg_guard.outputs.python == 'true' }}
     permissions:
       contents: read
+    services:
+      postgres:
+        image: postgres:16
+        env:
+          POSTGRES_USER: fg_user
+          POSTGRES_PASSWORD: fg_password
+          POSTGRES_DB: frostgate
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd="pg_isready -U fg_user -d frostgate"
+          --health-interval=5s
+          --health-timeout=5s
+          --health-retries=20
     env:
       FG_ENV: test
       FG_DB_BACKEND: postgres
-      POSTGRES_USER: fg_user
-      POSTGRES_DB: frostgate
-      POSTGRES_PASSWORD: fg_password
       FG_DB_URL: postgresql+psycopg://fg_user:fg_password@127.0.0.1:5432/frostgate
 
     steps:
@@ -283,6 +300,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
+
+      - name: Generate CI secrets
+        uses: ./.github/actions/fg-secrets
 
       - name: Python setup (cached)
         uses: ./.github/actions/fg-python-setup
@@ -292,14 +312,11 @@ jobs:
           prepare-workspace: "true"
           build-venv: "true"
 
-      - name: Create .env for compose
-        run: |
-          set -euo pipefail
-          printf "POSTGRES_USER=%s\nPOSTGRES_DB=%s\nPOSTGRES_PASSWORD=%s\nREDIS_PASSWORD=%s\nFG_AGENT_API_KEY=%s\nAG_CORS_ORIGINS=%s\nNATS_AUTH_TOKEN=%s\nFG_API_KEY=%s\n" \
-            "${POSTGRES_USER}" "${POSTGRES_DB}" "${POSTGRES_PASSWORD}" "devredis" "dev-agent-key" "http://localhost:13000" "ci-nats-token" "ci-api-key" > .env
+      - name: Apply postgres migrations
+        run: python api/db_migrations.py --backend postgres --apply
 
-      - name: Run Postgres verification lane
-        run: make db-postgres-verify
+      - name: Postgres migration smoke test
+        run: pytest -q tests/test_migrations_postgres_smoke.py
 
   admin:
     name: Admin Gateway (ci-admin)
