contracts: eliminate bp-c-002 drift with shared canonicalization
Unify OpenAPI normalization between generation and bp-c-002 gate, make contract app settings frozen/hermetic, and add determinism regression tests.\n\nAlso fixes regressions introduced by strict audit hash fields by providing default model-level entry_hash generation for direct ORM inserts.

--- a/deploy/frostgate-core/values.yaml
+++ b/deploy/frostgate-core/values.yaml
@@ -65,6 +65,9 @@ env:
   FG_ENV: "prod"
   FROSTGATE_ENFORCEMENT_MODE: "enforce"  # or "observe"
   FROSTGATE_LOG_LEVEL: "INFO"
+  FG_DB_URL: "postgresql+psycopg://fg_app:change_me@postgres:5432/frostgate"
+  FG_AUTH_ALLOW_FALLBACK: "false"
+  FG_RL_FAIL_OPEN: "false"
 
   # Add any other non-secret settings here as needed
   # EXAMPLE_EXTRA_CONFIG: "value"
