Agent hardening: deterministic IDs, queue fixes, sender correction, core client cleanup, contract tests stabilized

--- a/pytest.ini
+++ b/pytest.ini
@@ -7,7 +7,8 @@ norecursedirs =
     artifacts
     state
 
-# pytest-asyncio: kill the deprecation warning properly
+# Explicitly set asyncio fixture loop scope (prevents future pytest-asyncio breakage)
+asyncio_default_fixture_loop_scope = function
 
 markers =
     smoke: quick sanity checks
@@ -22,10 +23,5 @@ markers =
 # =============================================================================
 filterwarnings =
     error
-    # anyio MemoryObjectReceiveStream.__del__ fires during GC after TestClient
-    # context-manager exits – this is a known starlette/anyio false-positive,
-    # not a resource leak in our code.
     ignore:.*MemoryObjectReceiveStream:pytest.PytestUnraisableExceptionWarning
-    # psycopg Connection.__del__ fires when SQLAlchemy engines are GC'd at
-    # session teardown – not a leak in test code.
     ignore:.*BaseConnection.__del__:pytest.PytestUnraisableExceptionWarning
