Harden prod CI config: require webhook secret and ban outbound bypass flags

--- a/.github/actions/fg-secrets/action.yml
+++ b/.github/actions/fg-secrets/action.yml
@@ -35,4 +35,5 @@ runs:
           echo "REDIS_PASSWORD=$(gen | cut -c1-32)"
           echo "POSTGRES_PASSWORD=$(gen | cut -c1-32)"
           echo "FG_AGENT_API_KEY=$(gen)"
+          echo "FG_WEBHOOK_SECRET=$(gen)"
         } >> "$GITHUB_ENV"
