--- a/deploy/frostgate-core/values.yaml
+++ b/deploy/frostgate-core/values.yaml
@@ -68,6 +68,7 @@ env:
   FG_DB_URL: "postgresql+psycopg://fg_app:change_me@postgres:5432/frostgate"
   FG_AUTH_ALLOW_FALLBACK: "false"
   FG_RL_FAIL_OPEN: "false"
+  FG_WEBHOOK_SECRET: "change_me_set_via_secret_ref"
 
   # Add any other non-secret settings here as needed
   # EXAMPLE_EXTRA_CONFIG: "value"
