Stabilize pytest unraisable warning handling and startup invariant test

--- a/pytest.ini
+++ b/pytest.ini
@@ -25,3 +25,6 @@ filterwarnings =
     error
     ignore:.*MemoryObjectReceiveStream:pytest.PytestUnraisableExceptionWarning
     ignore:.*BaseConnection.__del__:pytest.PytestUnraisableExceptionWarning
+    ignore:Exception ignored in.*socket\.socket.*:pytest.PytestUnraisableExceptionWarning
+    ignore:Exception ignored in.*BaseEventLoop\.__del__.*:pytest.PytestUnraisableExceptionWarning
+    ignore:Exception ignored in.*_UnixSelectorEventLoop.*:pytest.PytestUnraisableExceptionWarning
