Finalize post-rebase SOC gate checks against manifest-backed IDs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,11 +131,40 @@ jobs:
             state/**
           if-no-files-found: ignore
 
+  enforcement_mode_matrix:
+    name: Enforcement Mode Matrix (prod/staging)
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    needs: fg_guard
+    if: ${{ github.event_name == 'pull_request' || needs.fg_guard.outputs.core == 'true' || needs.fg_guard.outputs.python == 'true' }}
+    permissions:
+      contents: read
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+
+      - name: Generate CI secrets
+        uses: ./.github/actions/fg-secrets
+
+      - name: Python setup (cached)
+        uses: ./.github/actions/fg-python-setup
+        with:
+          python-version: "3.12"
+          install-os-deps: "true"
+          prepare-workspace: "true"
+          build-venv: "true"
+
+      - name: Run enforcement-mode matrix check
+        run: make enforcement-mode-matrix
+
   unit:
     name: Unit (ci)
     runs-on: ubuntu-latest
     timeout-minutes: 25
-    needs: fg_guard
+    needs: [fg_guard, enforcement_mode_matrix]
     if: ${{ github.event_name == 'pull_request' || needs.fg_guard.outputs.core == 'true' || needs.fg_guard.outputs.python == 'true' }}
     permissions:
       contents: read
